--- a/PR090-StartedServiceReceiver/app/src/main/res/layout/activity_main.xml
+++ b/PR090-StartedServiceReceiver/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="MergeRootFrame">
     <ListView
         android:id="@+id/lstCanciones"
         android:layout_width="match_parent"
@@ -25,14 +26,13 @@
             android:contentDescription="@string/no_hay_canciones"
             android:src="@drawable/ic_action_playlist_add" />
         <TextView
-            android:id="@+id/lblNoHayCanciones"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imgNuevaCancion"
             android:layout_centerHorizontal="true"
             android:text="@string/no_hay_canciones" />
     </RelativeLayout>
-    <com.software.shell.fab.ActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnPlayStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,10 +40,6 @@
         android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
-        fab:button_color="@color/accent"
-        fab:button_colorPressed="@color/accent_light"
-        fab:image="@drawable/fab_play"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down" />
+        android:src="@drawable/fab_play"/>
 
 </FrameLayout>
