--- a/PR090-StartedServiceReceiver/app/src/main/res/layout/activity_main_item.xml
+++ b/PR090-StartedServiceReceiver/app/src/main/res/layout/activity_main_item.xml
@@ -22,7 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
         android:paddingTop="@dimen/three_lines_text_paddingTop"
         tools:text="Nombre"
         android:textSize="@dimen/three_lines_primary_text_textSize"
@@ -33,7 +35,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
         tools:text="Autor"
         android:layout_below="@+id/lblNombre"
         android:textSize="@dimen/three_lines_secundary_text_textSize"
@@ -45,7 +49,9 @@
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/three_lines_text_paddingBottom"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
         tools:text="Dirección"
         android:layout_below="@+id/lblAutor"
         android:textSize="@dimen/three_lines_secundary_text_textSize" />
