--- a/ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.675" />
 
     <Button
         android:id="@+id/button7"
@@ -117,5 +118,22 @@
         app:layout_constraintLeft_toRightOf="@+id/button9"
         app:layout_constraintTop_toTopOf="@+id/button9"
         android:layout_marginTop="0dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.083333336" />
+
+    <Button
+        android:id="@+id/respectoAGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
