--- a/ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="h,16:9"
+            app:layout_constraintDimensionRatio="h,16:9"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +53,7 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="Button"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -61,7 +61,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.88"
+        app:layout_constraintHorizontal_bias="0.882"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
@@ -135,5 +135,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="Button"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="310dp"
+        app:layout_constraintDimensionRatio="h,1:1" />
 
 </android.support.constraint.ConstraintLayout>
