--- a/PR156-Parcelable/app/src/main/res/layout/activity_main.xml
+++ b/PR156-Parcelable/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/no_disponibles"/>
+        android:freezesText="true"/>
 
     <Button
         android:id="@+id/btnSolicitar"
