--- a/PR097-RetainNonConfigurationInstance/app/src/main/res/layout/activity_main.xml
+++ b/PR097-RetainNonConfigurationInstance/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,42 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".RetainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margen"
-        android:text="onSave..."
-        tools:ignore="HardcodedText"/>
+        android:text="@string/onsave"/>
 
     <Button
         android:id="@+id/btnRetain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margen"
-        android:text="onRetain..."
         android:layout_below="@+id/btnSave"
-        tools:ignore="HardcodedText"/>
+        android:layout_marginBottom="@dimen/margen"
+        android:text="@string/onretain"/>
 
     <Button
         android:id="@+id/btnIcepick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margen"
-        android:text="Icepick"
         android:layout_below="@+id/btnRetain"
-        tools:ignore="HardcodedText"/>
+        android:layout_marginBottom="@dimen/margen"
+        android:text="@string/icepick"/>
 
+    <Button
+        android:id="@+id/btnStarter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnIcepick"
+        android:layout_marginBottom="@dimen/margen"
+        android:text="@string/activitystarter"/>
 
 </RelativeLayout>
