--- a/PR059-ActionView/app/src/main/res/layout/activity_main.xml
+++ b/PR059-ActionView/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lstAlumnos"
+<ListView
+    android:id="@+id/lstStudents"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"/>
