--- a/PR138-Palette/app/src/main/res/values/dimens.xml
+++ b/PR138-Palette/app/src/main/res/values/dimens.xml
@@ -1,4 +1,3 @@
 <resources>
-    <dimen name="toolbar_elevation">4dp</dimen>
-    <dimen name="muestra_padding">5dp</dimen>
+    <dimen name="activity_main_padding">5dp</dimen>
 </resources>
