--- a/PR040-JSON/app/src/main/res/layout/activity_main.xml
+++ b/PR040-JSON/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,20 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/lstAlumnos"
+        android:id="@+id/lstStudents"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:divider="@android:color/transparent"
-        android:dividerHeight="10dp"
-        android:padding="10dp"
+        android:dividerHeight="@dimen/activity_main_lstStudents_dividerHeight"
+        android:padding="@dimen/activity_main_lstStudents_padding"
         android:scrollbarStyle="outsideOverlay"/>
 
     <TextView
-        android:id="@+id/lblEmpty"
+        android:id="@+id/lblEmptyView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/no_hay_alumnos"/>
+        android:text="@string/activity_main_lblEmptyView"/>
 
 </android.support.v4.widget.SwipeRefreshLayout>
