--- a/PR154-PropertyAnimation/app/src/main/res/values/dimens.xml
+++ b/PR154-PropertyAnimation/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <resources>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="imagen_width">200dp</dimen>
+    <dimen name="activity_main_imgPhoto_width">200dp</dimen>
 
 </resources>
