--- a/PR170-DataBindingBidireccional/app/src/main/res/values/tratamientos.xml
+++ b/PR170-DataBindingBidireccional/app/src/main/res/values/tratamientos.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string-array name="tratamientos" tools:ignore="UnusedResources">
+    <string-array name="activity_main_treatments" tools:ignore="UnusedResources">
         <item>Sr.</item>
         <item>Sra.</item>
         <item>Dr.</item>
